# bookshop-api

./: .gitignore  README.md  config.py  main.py  pyproject.toml
.github/workflows/: tests.yml
deploy/dev/: Dockerfile  cp_pg_hba.sh  docker-compose.yaml  pg_hba.conf  pg_hba.conf 
src/blob_storage/: controller.py
src/context/: __init__.py  _context.py  _thread.py
src/core/: category.py  product.py  upload.py
src/db/: config.py  connection.py  models.py  session.py
src/utils/: lock.py  singleton.py  types.py
src/utils/logging/: handler.py  level.py  log_engine_client.py  logger.py  stack.py
src/web/: format.py  server.py
tests/acceptance/db/: common.py  db_test.py
