[tool.poetry]
name = "bookshop-api"
version = "0.1.0"
description = ""
authors = ["Harut Partamian <harutpartamian@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.2"
sqlalchemy = "^2.0.27"
psycopg2-binary = "^2.9.9"
termcolor = "^2.4.0"
pytest = "^8.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
